gac_sb/objects/AppATorganisme__c.object
<CustomObject>
    <description>APPLICATION AT</description>
    <fields>
        <fullName>Code_postal__c</fullName>
        <label>Code postal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commentaire__c</fullName>
        <label>Commentaire</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DelaiPassage__c</fullName>
        <label>Délai de passage (mois)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreRecoursGagnes__c</fullName>
        <label>Nombre de recours gagnés</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NombreTotalRecours__c</fullName>
        <label>Nombre total de recours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pays__c</fullName>
        <label>Pays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rue__c</fullName>
        <label>Rue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TauxSuccesCalcule__c</fullName>
        <formula>NombreRecoursGagnes__c /  NombreTotalRecours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Taux de succès (calculé)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>TauxSuccesTheorique__c</fullName>
        <label>Taux de succès (Théorique)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Telephone1__c</fullName>
        <label>Téléphone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone2__c</fullName>
        <label>Téléphone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Telephone3__c</fullName>
        <label>Téléphone 3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TypeOrganisme__c</fullName>
        <label>Type d&apos;organisme</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CRA</fullName>
                </value>
                <value>
                    <fullName>CARSAT</fullName>
                </value>
                <value>
                    <fullName>TASS</fullName>
                </value>
                <value>
                    <fullName>Cour d&apos;Appel</fullName>
                </value>
                <value>
                    <fullName>TCI</fullName>
                </value>
                <value>
                    <fullName>CNITAAT</fullName>
                </value>
                <value>
                    <fullName>Cour de Cassation</fullName>
                </value>
                <value>
                    <fullName>CRAM</fullName>
                </value>
                <value>
                    <fullName>CPAM</fullName>
                </value>
                <value>
                    <fullName>URSSAF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ville__c</fullName>
        <label>Ville</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZoneGeographique__c</fullName>
        <label>Zone géographique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Organisme</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Ville__c</columns>
        <columns>TypeOrganisme__c</columns>
        <columns>Telephone1__c</columns>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
        <language>fr</language>
    </listViews>
    <nameField>
        <label>Nom de l&apos;organisme</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organismes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>